--- a/views/destination/index.ejs
+++ b/views/destination/index.ejs
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-4">
                 <% if(destination.image.length) { %>
-                <img class="img-fluid" style="height: 290px";alt="" src="<%=destination.image[0].url%>">
+                <img class="img-fluid" style="height: 290px; width:100%";alt="" src="<%=destination.image[0].url%>">
                 <% } else { %>
                 <img class="img-fluid"
                     src="https://images.unsplash.com/photo-1547756536-cde3673fa2e5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1111&q=80"
