--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
-            <h4 class="alert-heading">ERROR-<%=err.message%></h4>
+            <h4 class="alert-heading">Error - <%=err.message%></h4>
             <!-- <p class="alert-content" style="font-size: 0.8em;"><%=err.stack%></p> -->
         </div>
     </div>
