--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
     <!-- In HTML -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="media-src http://localhost:3000/bgvideo.mp4 https://enigmatic-wildwood-38855.herokuapp.com/bgvideo.mp4 https://desolate-waters-10446-d18a6bc0f7a7.herokuapp.com/bgvideo.mp4"
+      content="media-src http://localhost:3000/bgvideo.mp4 https://desolate-waters-10446-d18a6bc0f7a7.herokuapp.com/bgvideo.mp4"
     />
 
     <title>Home</title>
